adicionado, cores e as classes das familias/grupos

--- a/index.html
+++ b/index.html
@@ -31,111 +31,111 @@
             <div>
                 <table>
                     <tr>
-                        <td>H</td>
+                        <td class="naoMetal">H</td>
                         <td colspan="16" class="vacuo"></td>
-                        <td>He</td>
+                        <td class="naoMetal gasNobre">He</td>
                     </tr>
                     <tr>
-                        <td>Li</td>
-                        <td>Be</td>
+                        <td class="metal alcalino">Li</td>
+                        <td class="metal terroso">Be</td>
                         <td colspan="10" class="vacuo"></td>
-                        <td>B</td>
-                        <td>C</td>
-                        <td>N</td>
-                        <td>O</td>
-                        <td>F</td>
-                        <td>Ne</td>
+                        <td class="naoMetal familiaBoro">B</td>
+                        <td class="naoMetal familiaCarbono">C</td>
+                        <td class="naoMetal familiaNitrogenio">N</td>
+                        <td class="naoMetal calcogenio">O</td>
+                        <td class="naoMetal halogenio">F</td>
+                        <td class="naoMetal gasNobre">Ne</td>
                     </tr>
                     <tr>
-                        <td>Na</td>
-                        <td>Mg</td>
+                        <td class="metal alcalino">Na</td>
+                        <td class="metal terroso">Mg</td>
                         <td colspan="10" class="vacuo"></td>
-                        <td>Al</td>
-                        <td>Si</td>
-                        <td>P</td>
-                        <td>S</td>
-                        <td>Cl</td>
-                        <td>Ar</td>
+                        <td class="metal familiaBoro">Al</td>
+                        <td class="naoMetal familiaCarbono">Si</td>
+                        <td class="naoMetal familiaNitrogenio">P</td>
+                        <td class="naoMetal calcogenio">S</td>
+                        <td class="naoMetal">Cl</td>
+                        <td class="naoMetal gasNobre">Ar</td>
                     </tr>
                     <tr>
-                        <td>K</td>
-                        <td>Ca</td>
-                        <td>Sc</td>
-                        <td>Ti</td>
-                        <td>V</td>
-                        <td>Cr</td>
-                        <td>Mn</td>
-                        <td>Fe</td>
-                        <td>Co</td>
-                        <td>Ni</td>
-                        <td>Cu</td>
-                        <td>Zn</td>
-                        <td>Ga</td>
-                        <td>Ge</td>
-                        <td>As</td>
-                        <td>Se</td>
-                        <td>Br</td>
-                        <td>Kr</td>
+                        <td class="metal alcalino">K</td>
+                        <td class="metal terroso">Ca</td>
+                        <td class="metal metaisTransicao">Sc</td>
+                        <td class="metal metaisTransicao">Ti</td>
+                        <td class="metal metaisTransicao">V</td>
+                        <td class="metal metaisTransicao">Cr</td>
+                        <td class="metal metaisTransicao">Mn</td>
+                        <td class="metal metaisTransicao">Fe</td>
+                        <td class="metal metaisTransicao">Co</td>
+                        <td class="metal metaisTransicao">Ni</td>
+                        <td class="metal metaisTransicao">Cu</td>
+                        <td class="metal metaisTransicao">Zn</td>
+                        <td class="metal familiaBoro">Ga</td>
+                        <td class="metal familiaCarbono">Ge</td>
+                        <td class="naoMetal familiaNitrogenio">As</td>
+                        <td class="naoMetal calcogenio">Se</td>
+                        <td class="naoMetal halogenio">Br</td>
+                        <td class="naoMetal gasNobre">Kr</td>
                     </tr>
                     <tr>
-                        <td>Rb</td>
-                        <td>Sr</td>
-                        <td>Y</td>
-                        <td>Zr</td>
-                        <td>Nb</td>
-                        <td>Mo</td>
-                        <td>Tc</td>
-                        <td>Ru</td>
-                        <td>Rh</td>
-                        <td>Pd</td>
-                        <td>Ag</td>
-                        <td>Cd</td>
-                        <td>In</td>
-                        <td>Sn</td>
-                        <td>Sb</td>
-                        <td>Te</td>
-                        <td>I</td>
-                        <td>Xe</td>
+                        <td class="metal alcalino">Rb</td>
+                        <td class="metal terroso">Sr</td>
+                        <td class="metal metaisTransicao">Y</td>
+                        <td class="metal metaisTransicao">Zr</td>
+                        <td class="metal metaisTransicao">Nb</td>
+                        <td class="metal metaisTransicao">Mo</td>
+                        <td class="metal metaisTransicao">Tc</td>
+                        <td class="metal metaisTransicao">Ru</td>
+                        <td class="metal metaisTransicao">Rh</td>
+                        <td class="metal metaisTransicao">Pd</td>
+                        <td class="metal metaisTransicao">Ag</td>
+                        <td class="metal metaisTransicao">Cd</td>
+                        <td class="metal familiaBoro">In</td>
+                        <td class="metal familiaCarbono">Sn</td>
+                        <td class="metal familiaNitrogenio">Sb</td>
+                        <td class="naoMeta calcogenio">Te</td>
+                        <td class="naoMetal halogenio">I</td>
+                        <td class="naoMetal gasNobre">Xe</td>
                     </tr>
                     <tr>
-                        <td>Cs</td>
-                        <td>Ba</td>
+                        <td class="metal alcalino">Cs</td>
+                        <td class="metal terroso">Ba</td>
                         <td>57-71</td>
-                        <td>Hf</td>
-                        <td>Ta</td>
-                        <td>W</td>
-                        <td>Re</td>
-                        <td>Os</td>
-                        <td>Ir</td>
-                        <td>Pt</td>
-                        <td>Au</td>
-                        <td>Hg</td>
-                        <td>Tl</td>
-                        <td>Pb</td>
-                        <td>Bi</td>
-                        <td>Po</td>
-                        <td>At</td>
-                        <td>Rn</td>
+                        <td class="metal metaisTransicao">Hf</td>
+                        <td class="metal metaisTransicao">Ta</td>
+                        <td class="metal metaisTransicao">W</td>
+                        <td class="metal metaisTransicao">Re</td>
+                        <td class="metal metaisTransicao">Os</td>
+                        <td class="metal metaisTransicao">Ir</td>
+                        <td class="metal metaisTransicao">Pt</td>
+                        <td class="metal metaisTransicao">Au</td>
+                        <td class="metal metaisTransicao">Hg</td>
+                        <td class="metal familiaBoro">Tl</td>
+                        <td class="metal familiaCarbono">Pb</td>
+                        <td class="metal familiaNitrogenio">Bi</td>
+                        <td class="metal calcogenio">Po</td>
+                        <td class="naoMetal halogenio">At</td>
+                        <td class="naoMetal gasNobre">Rn</td>
                     </tr>
                     <tr>
-                        <td>Fr</td>
-                        <td>Ra</td>
+                        <td class="metal alcalino">Fr</td>
+                        <td class="metal terroso">Ra</td>
                         <td>89-103</td>
-                        <td>Rf</td>
-                        <td>Db</td>
-                        <td>Sg</td>
-                        <td>Bh</td>
-                        <td>Hs</td>
-                        <td>Mt</td>
-                        <td>Ds</td>
-                        <td>Rg</td>
-                        <td>Cn</td>
-                        <td>Nh</td>
-                        <td>Fl</td>
-                        <td>Mc</td>
-                        <td>Lv</td>
-                        <td>Ts</td>
-                        <td>Og</td>
+                        <td class="metal metaisTransicao">Rf</td>
+                        <td class="metal metaisTransicao">Db</td>
+                        <td class="metal metaisTransicao">Sg</td>
+                        <td class="metal metaisTransicao">Bh</td>
+                        <td class="metal metaisTransicao">Hs</td>
+                        <td class="metal metaisTransicao">Mt</td>
+                        <td class="metal metaisTransicao">Ds</td>
+                        <td class="metal metaisTransicao">Rg</td>
+                        <td class="metal metaisTransicao">Cn</td>
+                        <td class="metal familiaBoro">Nh</td>
+                        <td class="metal familiaCarbono">Fl</td>
+                        <td class="metal familiaNitrogenio">Mc</td>
+                        <td class="metal calcogenio">Lv</td>
+                        <td class="naoMetal halogenio">Ts</td>
+                        <td class="naoMetal gasNobre">Og</td>
                     </tr>
                 </table>
             </div>
