--- a/index.html
+++ b/index.html
@@ -75,8 +75,10 @@
                         <td class="elemento terroso  metal ">Be</td>
                         <td colspan="10" id="legenda">
                             <div class="familias">
-                                <div class="metal">Metais</div>
-                                <div class="naoMetal">Não Metais</div>
+                                <div class="elemento lantanideo mouse">Lantanideo</div> 
+                                <div class="elemento actinideo mouse">Actinideo</div>
+                                <div class="metal mouse">Metais</div>
+                                <div class="naoMetal mouse">Não Metais</div>
                                 <div class="solido" style="border: 2px solid black;">Sólido</div>
                                 <div class="liquido" style="border: 2px solid black;">Líquido</div>
                                 <div class="gas" style="border: 2px solid black;">Gás</div>
@@ -150,7 +152,7 @@
                         <td class="numeroposicao">6</td>
                         <td class="elemento alcalino metal">Cs</td>
                         <td class="elemento terroso metal">Ba</td>
-                        <td>57-71</td>
+                        <td class="elemento lantanideo metal">57-71</td>
                         <td class="elemento metaisTransicao metal">Hf</td>
                         <td class="elemento metaisTransicao metal">Ta</td>
                         <td class="elemento metaisTransicao metal">W</td>
@@ -171,7 +173,7 @@
                         <td class="numeroposicao">7</td>
                         <td class="elemento alcalino metal">Fr</td>
                         <td class="elemento terroso metal">Ra</td>
-                        <td>89-103</td>
+                        <td class="elemento actinideo metal">89-103</td>
                         <td class="elemento metaisTransicao metal">Rf</td>
                         <td class="elemento metaisTransicao metal">Db</td>
                         <td class="elemento metaisTransicao metal">Sg</td>
@@ -187,6 +189,45 @@
                         <td class="elemento calcogenio metal">Lv</td>
                         <td class="elemento halogenio naoMetal">Ts</td>
                         <td class="elemento gasNobre naoMetal">Og</td>
+                    </tr>
+                    <tr>
+                        <td colspan="19" style="height: 30px;" class="vacuo"></td>
+                    </tr>
+                    <tr>
+                        <td colspan="4" class="vacuo"></td>
+                        <td class="elemento lantanideo metal">La</td>
+                        <td class="elemento lantanideo metal">Ce</td>
+                        <td class="elemento lantanideo metal">Pr</td>
+                        <td class="elemento lantanideo metal">Nd</td>
+                        <td class="elemento lantanideo metal">Pm</td>
+                        <td class="elemento lantanideo metal">Sm</td>
+                        <td class="elemento lantanideo metal">Eu</td>
+                        <td class="elemento lantanideo metal">Gd</td>
+                        <td class="elemento lantanideo metal">Tb</td>
+                        <td class="elemento lantanideo metal">Dy</td>
+                        <td class="elemento lantanideo metal">Ho</td>
+                        <td class="elemento lantanideo metal">Er</td>
+                        <td class="elemento lantanideo metal">Tm</td>
+                        <td class="elemento lantanideo metal">Yb</td>
+                        <td class="elemento lantanideo metal">Lu</td>
+                    </tr>
+                    <tr>
+                        <td colspan="4" class="vacuo"></td>
+                        <td class="elemento actinideo metal">Ac</td>
+                        <td class="elemento actinideo metal">Th</td>
+                        <td class="elemento actinideo metal">Pa</td>
+                        <td class="elemento actinideo metal">U</td>
+                        <td class="elemento actinideo metal">Np</td>
+                        <td class="elemento actinideo metal">Pu</td>
+                        <td class="elemento actinideo metal">Am</td>
+                        <td class="elemento actinideo metal">Cm</td>
+                        <td class="elemento actinideo metal">Bk</td>
+                        <td class="elemento actinideo metal">Cf</td>
+                        <td class="elemento actinideo metal">Es</td>
+                        <td class="elemento actinideo metal">Fm</td>
+                        <td class="elemento actinideo metal">Md</td>
+                        <td class="elemento actinideo metal">No</td>
+                        <td class="elemento actinideo metal">Lr</td>
                     </tr>
                 </table>
             </div>
